<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cricket">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/containerLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/team1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_xx_large" />

                <TextView
                    android:id="@+id/team_1_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:text="@string/Score_team_1"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:background="@android:color/white"
                    android:onClick="addSixForIndia"
                    android:text="@string/six_Button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:background="@android:color/white"
                    android:onClick="addFourForIndia"
                    android:text="@string/four_Button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:background="@android:color/white"
                    android:onClick="addOneForIndia"
                    android:text="@string/single_Button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:background="@android:color/white"
                    android:onClick="addOneForOutIndia"
                    android:text="@string/out_Button" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:text="@string/team2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_xx_large" />

                <TextView
                    android:id="@+id/team_2_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:text="@string/Score_team_2"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:background="@android:color/white"
                    android:onClick="addSixForEngland"
                    android:text="@string/six_Button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:background="@android:color/white"
                    android:onClick="addFourForEngland"
                    android:text="@string/four_Button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:background="@android:color/white"
                    android:onClick="addOneForEngland"
                    android:text="@string/single_Button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:background="@android:color/white"
                    android:onClick="addOneForOutEngland"
                    android:text="@string/out_Button" />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:onClick="resetScore"
            android:text="@string/RESET_Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerLinearLayout" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
